src/test/ui/error-codes/E0396-fixed.stderr
error: any use of this value will cause an error
  --> $DIR/E0396-fixed.rs:5:28
   |
LL | const VALUE: u8 = unsafe { *REG_ADDR };
   | ---------------------------^^^^^^^^^---
   |                            |
   |                            a memory access tried to interpret some bytes as a pointer
   |
   = note: #[deny(const_err)] on by default

error: aborting due to previous error

